# entity_system

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  config.h.in  entity_system.files  entity_system.includes  entity_system.pc.in
demos/: CMakeLists.txt  helper_allegro.hpp  snake.cc
include/entity_system/: entity_system.hpp  event_dispatcher.hpp  forwards.hpp  segment.hpp
tests/: CMakeLists.txt  test_entity_system.cc  test_event_dispatcher.cc  test_segment.cc
